Ranking: Texts are misaligned relative to the buttons - fix preview styles

--- a/packages/survey-core/src/default-theme/blocks/sv-ranking.scss
+++ b/packages/survey-core/src/default-theme/blocks/sv-ranking.scss
@@ -156,7 +156,6 @@
   .sv-ranking-item__index {
     background-color: transparent;
     box-shadow: inset 0 0 0 1px $foreground;
-    box-sizing: border-box;
   }
 }
 
